# tabular_embeddings

./: .gitignore  CLAUDE.md  PAPER_PLAN.md  PROJECT_STATUS.md  README.md  SAE_CRITIQUE.md  analyze_auxk_surfaces.py  analyze_auxk_sweep.py  cache_tabarena.py  cluster.py  compare_embeddings.py  compare_sae_concepts.py  compute_cka_from_saved.py  distributed.py  extract_embeddings.py  plot_training_trajectories.py  pyproject.toml  test_auxk.py  test_batchnorm_sae.py  test_batchtopk.py  test_batchtopk_adult.py  test_batchtopk_synthetic.py
3_output/: cka_table_clusters.tex  geometric_sweep_full.csv  geometric_sweep_full_summary.csv  geometric_sweep_tabarena.csv  geometric_sweep_tabarena_7model.csv  geometric_sweep_tabarena_summary.csv  geometric_sweep_tabarena_table.tex
analysis/: __init__.py  similarity.py  sparse_autoencoder.py  visualization.py
config/: __init__.py  optimal_extraction_layers.json  pymfe_taxonomy.json
data/: __init__.py  extended_loader.py  loader.py  preprocessing.py  tabarena_domains.json  tabarena_utils.py
docs/: OPTIMAL_LAYERS.md  labeling_pipeline.md  matching_pipeline.md  output-directory-structure.md
label_experiments/: run_fresh_state_machine.py
models/: __init__.py  base.py  carte_embeddings.py  hyperfast_embeddings.py  layer_extraction.py  mitra_embeddings.py  model_paths.py  mothernet_embeddings.py  tabdpt_embeddings.py  tabicl_embeddings.py  tabicl_v2_embeddings.py  tabpfn_embeddings.py  tabpfn_utils.py  tabula_embeddings.py
output/: annotated_feature_matches.json  cka_table_matrix.tex  cka_table_pairwise.tex  concept_dictionary_compact.json  concept_dictionary_complete.json  concept_hierarchy.json  concept_labels_all.json  concept_labels_full.json  concept_regression_hyperfast.json  concept_splitting_results_tiered_hun.json  concept_variance_decomposition.json  cross_model_concept_labels.json  cross_model_sae_comparison.json  domain_concept_analysis.json  geometric_sweep_quick.csv  geometric_sweep_tabarena_6model.csv  geometric_sweep_tabarena_6model_summary.csv  geometric_sweep_tabarena_7model_summary.csv  geometric_sweep_table.tex  layerwise_cka_carte_SpeedDating.npz  layerwise_cka_hyperfast_adult.npz  layerwise_cka_mitra_adult.npz  layerwise_cka_tabdpt_adult.npz  layerwise_cka_tabicl_adult.npz  layerwise_cka_tabpfn.npz  layerwise_cka_tabpfn_SpeedDating.npz  layerwise_cka_tabpfn_adult.npz  layerwise_depth_analysis_carte.json  layerwise_depth_analysis_hyperfast.json  layerwise_depth_analysis_mitra.json  layerwise_depth_analysis_mitra_regression.json  layerwise_depth_analysis_tabdpt.json  layerwise_depth_analysis_tabicl.json  layerwise_depth_analysis_tabicl_v2.json  layerwise_depth_analysis_tabpfn.json  layerwise_depth_analysis_tabpfn_regression.json  pymfe_tabarena_cache.json  (+17 more)
(+381 files in other folders)
