[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tabular-embeddings"
version = "0.1.0"
description = "Embedding extraction and comparison for tabular foundation models"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Individual model dependencies
tabpfn = ["tabpfn>=2.0"]
tabicl = ["tabicl"]
hyperfast = ["hyperfast"]
mitra = ["autogluon.tabular"]
mothernet = ["ticl @ git+https://github.com/microsoft/ticl.git"]

# All models
models = [
    "tabpfn>=2.0",
    "tabicl",
    "hyperfast",
    "autogluon.tabular",
    "ticl @ git+https://github.com/microsoft/ticl.git",
]

# Distributed execution
distributed = ["dask[distributed]"]

# Development
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
