[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-embeddings"
version = "0.1.0"
description = "Embedding extraction and comparison for tabular foundation models"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
# Individual model dependencies
tabpfn = ["tabpfn>=2.0"]
tabicl = ["tabicl"]
tabdpt = ["tabdpt"]
hyperfast = ["hyperfast"]
carte = ["carte-ai", "torch_geometric"]
mitra = ["autogluon.tabular[mitra]"]
tabula8b = ["transformers>=4.36", "bitsandbytes>=0.41,<0.46", "accelerate"]
mothernet = ["ticl @ git+https://github.com/microsoft/ticl.git"]

# All models (except mothernet which requires manual install)
models = [
    "tabpfn>=2.0",
    "tabicl",
    "tabdpt",
    "hyperfast",
    "carte-ai",
    "torch_geometric",
    "autogluon.tabular[mitra]",
    "transformers>=4.36",
    "bitsandbytes>=0.41,<0.46",
    "accelerate",
]

# SAE training and hyperparameter optimization
sae = [
    "optuna>=3.0",
    "wandb",
]

# Benchmark dataset loaders
benchmarks = [
    "relbench",
    "pmlb",
]

# Distributed execution
distributed = ["dask[distributed]"]

# Plotting extras (beyond matplotlib/seaborn in core)
plots = [
    "adjustText",
    "tqdm",
]

# Development and testing
dev = [
    "pytest>=7.0",
]

# Everything needed for a full worker environment
all = [
    "tabular-embeddings[models,sae,benchmarks,distributed,plots,dev]",
]

[tool.setuptools.packages.find]
include = ["models*", "data*", "analysis*", "config*", "scripts*"]
exclude = ["output*", "notebooks*"]
